Added ability to hide EF and Element names.

--- a/app/templates/eventFrameGroups/dashboard.html
+++ b/app/templates/eventFrameGroups/dashboard.html
@@ -227,6 +227,14 @@
                             {"visible": false, "targets": 0},
                         {% endif %}
 
+                        {% if eventFrameTemplateView.dictionary()["showEventFrameName"] == "False" %}
+                            {"visible": false, "targets": 1},
+                        {% endif %}
+
+                        {% if eventFrameTemplateView.dictionary()["showElementName"] == "False" %}
+                            {"visible": false, "targets": 2},
+                        {% endif %}
+
                         {% if eventFrameTemplateView.dictionary()["showRemoveButton"] == "False" %}
                             {"visible": false, "targets": {{ namespace.numberOfEventFrameAttributeTemplates }} + 3},
                         {% endif %}
