--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -57,13 +57,13 @@
                     </li>
                     <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Dash <span class = "caret"></span></a>
                         <ul class = "dropdown-menu">
-                            <li><a href = '{#{ url_for("") }#}' target = "_blank">Active Event Frame Summary</a></li>
-                            <li><a href = '{#{ url_for("") }#}' target = "_blank">Element Summary</a></li>
-                            <li><a href = '{#{ url_for("") }#}' target = "_blank">Element Values Graph</a></li>
-                            <li><a href = '{#{ url_for("") }#}' target = "_blank">Event Frame Group Summary</a></li>
-                            <li><a href = '{#{ url_for("") }#}' target = "_blank">Event Frames Graph</a></li>
-                            <li><a href = '{#{ url_for("") }#}' target = "_blank">Event Frames Overlay</a></li>
-                            <li><a href = '{#{ url_for("") }#}' target = "_blank">Tag Values Graph</a></li>
+                            <li><a href = '{{ url_for("dash.activeEventFramesSummary") }}'>Active Event Frames Summary</a></li>
+                            <li><a href = '{{ url_for("dash.elementSummary") }}'>Element Summary</a></li>
+                            <li><a href = '{{ url_for("dash.elementValuesGraph") }}'>Element Values Graph</a></li>
+                            <li><a href = '{{ url_for("dash.eventFrameGroupSummary") }}'>Event Frame Group Summary</a></li>
+                            <li><a href = '{{ url_for("dash.eventFramesGraph") }}'>Event Frames Graph</a></li>
+                            <li><a href = '{{ url_for("dash.eventFramesOverlay") }}'>Event Frames Overlay</a></li>
+                            <li><a href = '{{ url_for("dash.tagValuesGraph") }}'>Tag Values Graph</a></li>
                         </ul>
                     </li>
                     <li><a href = {{ "" | grafanaUrl() }} target = "_blank">Grafana</a></li>
