Tag Values Graph drafted.

--- a/app/templates/tagValuesGraphDash/tagValuesGraphDash.html
+++ b/app/templates/tagValuesGraphDash/tagValuesGraphDash.html
@@ -7,6 +7,18 @@
         <h1>Tag Values Graph Dash <small></small></h1>
     </div>
     <div class = "embed-responsive embed-responsive-16by9">
-        <iframe class = "embed-responsive-item" src = '{{ url_for("/tagValuesGraphDash/") }}'></iframe>
+        <iframe id = "iframe" class = "embed-responsive-item"></iframe>
     </div>
+{% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+    <script type = "text/javascript" src = {{ url_for("static", filename = "js/moment.min.js") }}></script>
+    <script type = "text/javascript" src = {{ url_for("static", filename = "js/moment-timezone-with-data.min.js") }}></script>
+    <script>
+        $(document).ready(function()
+        {
+            $("#iframe").attr("src", '{{ url_for("/tagValuesGraphDash/") }}' + "?localTimezone=" + moment.tz.guess(true))
+        })
+    </script>
 {% endblock %}
