eventFramesGraphDash to  eventFrameGraphDash.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -61,7 +61,7 @@
                             <li><a href = '{{ url_for("dash.elementSummary") }}'>Element Summary</a></li>
                             <li><a href = '{{ url_for("dash.elementValuesGraph") }}'>Element Values Graph</a></li>
                             <li><a href = '{{ url_for("dash.eventFrameGroupSummary") }}'>Event Frame Group Summary</a></li>
-                            <li><a href = '{{ url_for("dash.eventFramesGraph") }}'>Event Frames Graph</a></li>
+                            <li><a href = '{{ url_for("dash.eventFrameGraph") }}'>Event Frame Graph</a></li>
                             <li><a href = '{{ url_for("dash.eventFramesOverlay") }}'>Event Frames Overlay</a></li>
                             <li><a href = '{{ url_for("dash.tagValuesGraph") }}'>Tag Values Graph</a></li>
                         </ul>
