Minor header and title cleanup.

--- a/app/templates/elementSummaryDash/elementSummaryDash.html
+++ b/app/templates/elementSummaryDash/elementSummaryDash.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Element Summary Dash{% endblock %}
+{% block title %}Element Summary{% endblock %}
 
 {% block page_content %}
     <div class = "page-header">
-        <h1>Element Summary Dash <small></small></h1>
+        <h1>Element Summary <small></small></h1>
     </div>
     <div class = "embed-responsive embed-responsive-16by9">
         <iframe class = "embed-responsive-item" src = '{{ url_for("/elementSummaryDash/") }}'></iframe>
