--- a/app/templates/eventFrameGraphDash/eventFrameGraphDash.html
+++ b/app/templates/eventFrameGraphDash/eventFrameGraphDash.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Event Frame Graph Dash{% endblock %}
+{% block title %}Event Frame Graph{% endblock %}
 
 {% block page_content %}
     <div class = "embed-responsive embed-responsive-16by9">
