--- a/app/templates/eventFramesOverlayDash/eventFramesOverlayDash.html
+++ b/app/templates/eventFramesOverlayDash/eventFramesOverlayDash.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Event Frames Overlay Dash{% endblock %}
+{% block title %}Event Frames Overlay{% endblock %}
 
 {% block page_content %}
     <div class = "page-header">
-        <h1>Event Frames Overlay Dash <small></small></h1>
+        <h1>Event Frames Overlay <small></small></h1>
     </div>
     <div class = "embed-responsive embed-responsive-16by9">
         <iframe class = "embed-responsive-item" src = '{{ url_for("/eventFramesOverlayDash/") }}'></iframe>
