--- a/app/templates/tagValuesGraphDash/tagValuesGraphDash.html
+++ b/app/templates/tagValuesGraphDash/tagValuesGraphDash.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Tag Values Graph Dash{% endblock %}
+{% block title %}Tag Values Graph{% endblock %}
 
 {% block page_content %}
     <div class = "embed-responsive embed-responsive-16by9">
