--- a/app/templates/activeEventFramesSummaryDash/activeEventFramesSummaryDash.html
+++ b/app/templates/activeEventFramesSummaryDash/activeEventFramesSummaryDash.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Active Event Frame Summary Dash{% endblock %}
+{% block title %}Active Event Frame Summary{% endblock %}
 
 {% block page_content %}
     <div class = "page-header">
-        <h1>Active Event Frame Summary Dash <small></small></h1>
+        <h1>Active Event Frame Summary <small></small></h1>
     </div>
     <div class = "embed-responsive embed-responsive-16by9">
         <iframe class = "embed-responsive-item" src = '{{ url_for("/activeEventFramesSummaryDash/") }}'></iframe>
