--- a/app/templates/elementValuesGraphDash/elementValuesGraphDash.html
+++ b/app/templates/elementValuesGraphDash/elementValuesGraphDash.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Element Values Graph Dash{% endblock %}
+{% block title %}Element Values Graph{% endblock %}
 
 {% block page_content %}
     <div class = "page-header">
-        <h1>Element Values Graph Dash <small></small></h1>
+        <h1>Element Values Graph <small></small></h1>
     </div>
     <div class = "embed-responsive embed-responsive-16by9">
         <iframe class = "embed-responsive-item" src = '{{ url_for("/elementValuesGraphDash/") }}'></iframe>
