--- a/app/templates/eventFrameGroupSummaryDash/eventFrameGroupSummaryDash.html
+++ b/app/templates/eventFrameGroupSummaryDash/eventFrameGroupSummaryDash.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Event Frame Group Summary Dash{% endblock %}
+{% block title %}Event Frame Group Summary{% endblock %}
 
 {% block page_content %}
     <div class = "page-header">
-        <h1>Event Frame Group Summary Dash <small></small></h1>
+        <h1>Event Frame Group Summary <small></small></h1>
     </div>
     <div class = "embed-responsive embed-responsive-16by9">
         <iframe class = "embed-responsive-item" src = '{{ url_for("/eventFrameGroupSummaryDash/") }}'></iframe>
