--- a/app/templates/elementSummaryDash/elementSummaryDash.html
+++ b/app/templates/elementSummaryDash/elementSummaryDash.html
@@ -3,10 +3,19 @@
 {% block title %}Element Summary{% endblock %}
 
 {% block page_content %}
-    <div class = "page-header">
-        <h1>Element Summary <small></small></h1>
-    </div>
     <div class = "embed-responsive embed-responsive-16by9">
-        <iframe class = "embed-responsive-item" src = '{{ url_for("/elementSummaryDash/") }}'></iframe>
+        <iframe id = "iframe" class = "embed-responsive-item"></iframe>
     </div>
+{% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+    <script type = "text/javascript" src = {{ url_for("static", filename = "js/moment.min.js") }}></script>
+    <script type = "text/javascript" src = {{ url_for("static", filename = "js/moment-timezone-with-data.min.js") }}></script>
+    <script>
+        $(document).ready(function()
+        {
+            $("#iframe").attr("src", '{{ url_for("/elementSummaryDash/") }}' + "?localTimezone=" + moment.tz.guess(true))
+        })
+    </script>
 {% endblock %}
