--- a/app/templates/dashes/elementSummary/elementSummary.html
+++ b/app/templates/dashes/elementSummary/elementSummary.html
@@ -3,6 +3,41 @@
 {% block title %}Element Summary{% endblock %}
 
 {% block page_content %}
+    <div>
+        <ol class = "breadcrumb">
+            {% if site is not none %}
+                <li><a href = '{{ url_for("elements.selectElement", selectedClass = "Root") }}'><span class = "glyphicon glyphicon-home"></span></a></li>
+                <li><a href = '{{ url_for("elements.selectElement", selectedClass = "Enterprise",
+                    selectedId = site.Enterprise.id()) }}'>{{ site.Enterprise.Name }}</a></li>
+                <li>
+                    <a title = "Previous" href = '{{ url_for("dashes.elementSummary", idClass = "site", id = site.previous().id()) }}'>
+                        <span class = "glyphicon glyphicon-arrow-left"></span></a>
+                    <a title = "Next" href = '{{ url_for("dashes.elementSummary", idClass = "site", id = site.next().id()) }}'>
+                        <span class = "glyphicon glyphicon-arrow-right"></span></a>
+                    <a href = '{{ url_for("elements.selectElement", selectedClass = "Site", selectedId = site.id()) }}'>{{ site.Name }}</a>
+                </li>
+                <li class = "active">Element Summary</li>
+            {% elif elementTemplate is not none %}
+                <li><a href = '{{ url_for("elements.selectElement", selectedClass = "Root") }}'><span class = "glyphicon glyphicon-home"></span></a></li>
+                <li><a href = '{{ url_for("elements.selectElement", selectedClass = "Enterprise",
+                    selectedId = elementTemplate.Site.Enterprise.id()) }}'>{{ elementTemplate.Site.Enterprise.Name }}</a></li>
+                <li><a href = '{{ url_for("elements.selectElement", selectedClass = "Site",
+                    selectedId = elementTemplate.Site.id()) }}'>{{ elementTemplate.Site.Name }}</a></li>
+                <li>
+                    <a title = "Previous" href = '{{ url_for("dashes.elementSummary", idClass = "ElementTemplate",
+                        id = elementTemplate.previous().id()) }}'><span class = "glyphicon glyphicon-arrow-left"></span></a>
+                    <a title = "Next" href = '{{ url_for("dashes.elementSummary", idClass = "ElementTemplate",
+                        id = elementTemplate.next().id()) }}'><span class = "glyphicon glyphicon-arrow-right"></span></a>
+                    <a href = '{{ url_for("elements.selectElement", selectedClass = "ElementTemplate",
+                        id = elementTemplate.id()) }}'>{{ elementTemplate.Name }}</a>
+                </li>
+                <li class = "active">Element Summary</li>
+            {% endif %}
+        </ol>
+    </div>
+    <div class = "page-header">
+        <h1>Element Summary <small></small></h1>
+    </div>
     <div class = "embed-responsive embed-responsive-4by3">
         <iframe id = "iframe" class = "embed-responsive-item"></iframe>
     </div>
@@ -12,6 +47,9 @@
     {{ super() }}
     <script type = "text/javascript" src = {{ url_for("static", filename = "js/moment.min.js") }}></script>
     <script type = "text/javascript" src = {{ url_for("static", filename = "js/moment-timezone-with-data.min.js") }}></script>
+    {% block setTabIndex %}
+        {{ super() }}
+    {% endblock %}
     <script>
         $(document).ready(function()
         {
@@ -41,6 +79,8 @@
             {% endif %}
 
             $("#iframe").attr("src", '{{ url_for("/elementSummaryDash/") }}' + "?localTimezone=" + moment.tz.guess(true) + parameters)
+            setTabIndex()
+            $('ol.breadcrumb a[title="Next"]').focus()
         })
     </script>
 {% endblock %}
