--- a/app/templates/elements/select.html
+++ b/app/templates/elements/select.html
@@ -70,8 +70,8 @@
                 <a class = "btn btn-default" title = "Add" href = '{{ url_for("elements.addElement", elementTemplateId = parent.id()) }}' role = "button">
                     <span class = "glyphicon glyphicon-plus"></span></a>
             {% endif %}
-            <a class = "btn btn-default" title = "Dash" href = '{{ url_for("dashes.elementSummary", idType = "elementTemplate", id = parent.id()) }}'
-                target = "_blank"><span class = "glyphicon glyphicon-stats"></span></a>
+            <a class = "btn btn-default" title = "Dash" href = '{{ url_for("dashes.elementSummary", idClass = "ElementTemplate", id = parent.id()) }}'>
+                <span class = "glyphicon glyphicon-stats"></span></a>
             <br><br>
             Toggle Column:
             <button type = "button" class = "btn btn-primary btn-xs" id = "buttonHideAllColumns">Hide All</button>
@@ -95,7 +95,7 @@
                 <a class = "btn btn-default" title = "Add" href = '{{ url_for("elementTemplates.addElementTemplate", siteId = parent.id()) }}'
                     role = "button"><span class = "glyphicon glyphicon-plus"></span></a>
             {% endif %}
-            <a class = "btn btn-default" title = "Dash" href = '{{ url_for("dashes.elementSummary", idType = "site", id = parent.id()) }}' target = "_blank">
+            <a class = "btn btn-default" title = "Dash" href = '{{ url_for("dashes.elementSummary", idClass = "Site", id = parent.id()) }}'>
                 <span class = "glyphicon glyphicon-stats"></span></a>
             <br><br>
         {% endif %}
@@ -151,7 +151,7 @@
                                 <td></td>
                                 {% if current_user.isAdministrator() %}
                                     <td><a class = "btn btn-default" title = "Configure" href = '{{ url_for("elements.selectElement",
-                                        selectedClass = "ElementAttributeTemplate", selectedId = child.id()) }}'><span class = "glyphicon glyphicon-wrench">                                            
+                                        selectedClass = "ElementAttributeTemplate", selectedId = child.id()) }}'><span class = "glyphicon glyphicon-wrench">
                                         </span></a></td>
                                     <td><a class = "btn btn-default" title = "Edit" href = '{{ url_for("elementTemplates.editElementTemplate",
                                         elementTemplateId = child.id()) }}'><span class = "glyphicon glyphicon-edit"></span></a></td>
