--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -55,7 +55,7 @@
                             {% endif %}
                         </ul>
                     </li>
-                    <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Dash <span class = "caret"></span></a>
+                    <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Dashes <span class = "caret"></span></a>
                         <ul class = "dropdown-menu">
                             <li><a href = '{{ url_for("dashes.activeEventFramesSummary") }}'>Active Event Frames Summary</a></li>
                             <li><a href = '{{ url_for("dashes.elementSummary") }}'>Element Summary</a></li>
