--- a/app/templates/dashes/tagValuesGraph/tagValuesGraph.html
+++ b/app/templates/dashes/tagValuesGraph/tagValuesGraph.html
@@ -56,6 +56,9 @@
     {{ super() }}
     <script type = "text/javascript" src = {{ url_for("static", filename = "js/moment.min.js") }}></script>
     <script type = "text/javascript" src = {{ url_for("static", filename = "js/moment-timezone-with-data.min.js") }}></script>
+    {% block setTabIndex %}
+        {{ super() }}
+    {% endblock %}
     <script>
         $(document).ready(function()
         {
@@ -69,6 +72,8 @@
             {% endif %}
 
             $("#iframe").attr("src", '{{ url_for("/tagValuesGraphDash/") }}' + "?localTimezone=" + moment.tz.guess(true) + parameters) 
+            setTabIndex()
+            $('ol.breadcrumb a[title="Next"]').focus()
         })
     </script>
 {% endblock %}
